# qtandroidcls

./: CMakeLists.txt
example/qtandroiddemo/: CMakeLists.txt
example/qtandroiddemo/android/: AndroidManifest.xml
example/qtandroiddemo/android/src/ca/calm/qtandroiddemo/: qtandroiddemo.java
example/qtandroiddemo/src/: main.cpp  mainwindow.cpp  mainwindow.ui
output/include/qtandroidcls/: qtandroidcls.h
script/: output-cpplib.py  package.py
src/: qtandroidcls.cpp  qtandroidcls.h
